--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
             #close-btn:hover {
                 background: rgb(255, 0, 0);
             }
+            #notification {
+                position: fixed;
+                bottom: 20px;
+                left: 20px;
+                width: 200px;
+                padding: 20px;
+                border-radius: 5px;
+                background-color: white;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+                z-index: 9;
+                font-size: 14px;
+            }
+            .hidden {
+                display: none;
+            }
         </style>
     </head>
     <body>
@@ -92,6 +107,15 @@
                 <button onclick="editor_goto()">Go to</button><button onclick="editor_cancel_gotoline()">Cancel</button>
             </div>
         </div>
+        <div id="notification" class="hidden">
+            <p id="message"></p>
+            <button id="close-button" onClick="closeNotification()">
+              Close
+            </button>
+            <button id="restart-button" onClick="restartApp()" class="hidden">
+              Restart
+            </button>
+        </div>
     </body>
     <script>
         document.oninput = function(event) {
@@ -103,6 +127,33 @@
         }
         document.getElementById("foregroundcolor").onchange = function(ev) { document.getElementById("editor_input").style.color = ev.target.value }
         document.getElementById("backgroundcolor").onchange = function(ev) { document.getElementById("editor_input").style.backgroundColor = ev.target.value }
+        const { ipcRenderer } = require('electron');
+        const version = document.getElementById('version');
+        const notification = document.getElementById('notification');
+        const message = document.getElementById('message');
+        const restartButton = document.getElementById('restart-button');
+        ipcRenderer.send('app_version');
+        ipcRenderer.on('app_version', (event, arg) => {
+            ipcRenderer.removeAllListeners('app_version');
+            version.innerText = 'Version ' + arg.version;
+        });
+        ipcRenderer.on('update_available', () => {
+            ipcRenderer.removeAllListeners('update_available');
+            message.innerText = 'A new update is available. Downloading now...';
+            notification.classList.remove('hidden');
+        });
+        ipcRenderer.on('update_downloaded', () => {
+            ipcRenderer.removeAllListeners('update_downloaded');
+            message.innerText = 'Update Downloaded. It will be installed on restart. Restart now?';
+            restartButton.classList.remove('hidden');
+            notification.classList.remove('hidden');
+        });
+        function closeNotification() {
+            notification.classList.add('hidden');
+        }
+        function restartApp() {
+            ipcRenderer.send('restart_app');
+        }
     </script>
     <script src="renderer.js"></script>
 </html>
