--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
         <title>Edit Document In Terminal</title>
         <link rel="stylesheet" href="main.css">
         <script src="main.js"></script>
+        <script>
+            function isElectron() {
+                // Renderer process
+                if (typeof window !== 'undefined' && typeof window.process === 'object' && window.process.type === 'renderer') {
+                    return true;
+                }
+                // Main process
+                if (typeof process !== 'undefined' && typeof process.versions === 'object' && !!process.versions.electron) {
+                    return true;
+                }
+                // Detect the user agent when the `nodeIntegration` option is set to true
+                if (typeof navigator === 'object' && typeof navigator.userAgent === 'string' && navigator.userAgent.indexOf('Electron') >= 0) {
+                    return true;
+                }
+                return false;
+            }
+            if (!isElectron()) {
+                console.log("%cError:\n%cThe system have detected that you are attempting to load the html file which is illegal.\n%cThe HTML file has been stopped from continue loading. Refreshing will not work.", "color: red", "color: white", "color: white")
+                window.stop()
+            }
+        </script>
         <style>
             #menu-bar {
                 display: flex;
@@ -45,13 +66,16 @@
             #close-btn:hover {
                 background: rgb(255, 0, 0);
             }
+            #editor_input {
+                overflow-y: scroll;
+            }
         </style>
     </head>
     <body>
         <div id="menu-bar">
             <div class="left" role="menu">
                 <button class="menubar-btn" id="menu-btn" title="Menu"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M2 10V9h12v1H2zm0-4h12v1H2V6zm12-3v1H2V3h12zM2 12v1h12v-1H2z"/></svg></button>
-                <p style="color: white; margin-left: 20px;">edit - <span id="_file_name">Untitled</span><span id="current_state"></span></p>
+                <p style="color: white; margin-left: 20px;" id="title">edit - <span id="_file_name">Untitled</span><span id="current_state"></span></p>
             </div>
             <div class="right">
                 <button class="menubar-btn" id="minimize-btn" title="Minimize"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M14 8v1H3V8h11z"/></svg></button>
@@ -61,7 +85,10 @@
         </div>
         <div id="editor">
             <div id="editor_overlay" style="position: absolute; display: none; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.3); z-index: 1;"></div>
-            <textarea id="editor_input" style="width: calc(100% - 12px); height: calc(100% - 12px); bottom: 0px; z-index: -1; resize: none; outline: none; background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); border: 6px double rgb(197, 197, 197); padding: 0; margin: 0;"></textarea>
+            <textarea ng-model-options="{ updateOn: 'blur' }" autocomplete="off" autocorrect="off" autocapitalize="off" id="editor_input" style="width: calc(100% - 12px); height: calc(100% - 36px); bottom: 0px; z-index: -1; resize: none; outline: none; background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); border: 6px double rgb(197, 197, 197); padding: 0; margin: 0;"></textarea>
+            <div id="editor_info" style="position: absolute; width: 100%; height: 24px; margin-top: -4px; background-color: #414141; display: block">
+                <p style="color: white; margin-top: 3px; margin-left: 4px;"><span id="letter_count">0</span> characters (<span id="word_count">0</span> words); Ln <span id="line_count">1</span>, Col <span id="col_count">1</span></p>
+            </div>
             <div id="editor_settings" style="z-index: 3; display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 500px; height: 150px; color: white; border: 6px double white">
                 <p style="text-align: center; margin-bottom: 3px;">Settings</p>
                 <!--<p style="text-align: center;">Save file as:</p>-->
@@ -95,13 +122,13 @@
         </div>
     </body>
     <script>
-        document.getElementById("editor_input").addEventListener("keydown", (event) => {
+        document.oninput = function(event) {
             if (cachedText !== document.getElementById("editor_input").value) {
                 document.getElementById("current_state").innerHTML = " (Modified)";
             } else {
                 document.getElementById("current_state").innerHTML = "";
             }
-        })
+        }
         document.getElementById("foregroundcolor").onchange = function(ev) { document.getElementById("editor_input").style.color = ev.target.value }
         document.getElementById("backgroundcolor").onchange = function(ev) { document.getElementById("editor_input").style.backgroundColor = ev.target.value }
     </script>
