--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         </div>
         <div id="editor">
             <div id="editor_overlay" style="position: absolute; display: none; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.3); z-index: 1;"></div>
-            <textarea ng-model-options="{ updateOn: 'blur' }" autocomplete="off" autocorrect="off" autocapitalize="off" id="editor_input" style="width: calc(100% - 12px); height: calc(100% - 36px); bottom: 0px; z-index: -1; resize: none; outline: none; background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); border: 6px double rgb(197, 197, 197); padding: 0; margin: 0;"></textarea>
+            <textarea ng-model-options="{ updateOn: 'blur' }" autocomplete="off" autocorrect="off" autocapitalize="off" id="editor_input" style="width: calc(100% - 12px); height: calc(100% - 36px); bottom: 0px; z-index: -1; resize: none; outline: none; background-color: rgb(0, 0, 0); color: rgb(255, 255, 255); border: 6px double rgb(197, 197, 197); padding: 0; margin: 0; white-space: break-spaces;"></textarea>
             <div id="editor_info" style="position: absolute; width: 100%; height: 24px; margin-top: -4px; background-color: #414141; display: block">
-                <p style="color: white; margin-top: 3px; margin-left: 4px;"><span id="letter_count">0</span> characters (<span id="word_count">0</span> words); Ln <span id="line_count">1</span>, Col <span id="col_count">1</span></p>
+                <p style="color: white; margin-top: 3px; margin-left: 4px;"><span id="letter_count">0</span><span id="letter_count_1"></span> characters (<span id="word_count">0</span> words); Ln <span id="line_count">1</span>, Col <span id="col_count">1</span></p>
             </div>
             <div id="editor_settings" style="z-index: 3; display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 500px; height: 150px; color: white; border: 6px double white">
                 <p style="text-align: center; margin-bottom: 3px;">Settings</p>
@@ -100,23 +100,33 @@
                 </center>
                 <!--</div>-->
             </div>
-            <div id="editor_find" style="bottom: 0; right: 0; padding: 5px 5px; z-index: 3; display: none; position: absolute; width: 360px; height: 25px; color: white; border: 6px double white">
+            <div id="editor_find" style="bottom: 0; right: 0; padding: 5px 5px; z-index: 3; display: none; position: absolute; width: 380px; height: 25px; color: white; border: 6px double white">
                 <label for="editor_find_name" style="text-align: center;">Find: </label>
-                <input placeholder="Find word" id="editor_find_name" style="outline: none; border: 2px solid gray; width: 80px;">
+                <input type="text" placeholder="Find word" id="editor_find_name" style="/*outline: none; border: 2px solid gray; */width: 80px;">
                 <button onclick="editor_find1()">Find</button><button onclick="editor_cancel_find()">Cancel</button>
-                <input type="checkbox" id="editor_wrap_around"><label for="editor_wrap_around">Wrap Around</label>
+                <label class="b-contain" style="margin-left: 5px">
+                    <span>Wrap Around</span>
+                    <input type="checkbox" id="editor_wrap_around">
+                    <div class="b-input"></div>
+                </label>
+                <!-- <input type="checkbox" id="editor_wrap_around"><label for="editor_wrap_around">Wrap Around</label> -->
             </div>
-            <div id="editor_replace" style="bottom: 0; right: 0; padding: 5px 5px; z-index: 3; display: none; position: absolute; width: 685px; height: 25px; color: white; border: 6px double white">
+            <div id="editor_replace" style="bottom: 0; right: 0; padding: 5px 5px; z-index: 3; display: none; position: absolute; width: 710px; height: 25px; color: white; border: 6px double white">
                 <label for="editor_find_replace_name" style="text-align: center">Find:&nbsp;</label>
-                <input onkeydown="editor_replace_find_replace()" placeholder="Find word" id="editor_find_replace_name" style="outline: none; border: 2px solid gray; width: 80px;">
+                <input type="text" onkeydown="editor_replace_find_replace()" placeholder="Find word" id="editor_find_replace_name" style="/*outline: none; border: 2px solid gray; */width: 80px;">
                 <label for="editor_replace_find_name" style="text-align: center">Replace:&nbsp;</label>
-                <input onkeydown="editor_replace_find_replace()" placeholder="Replace with" id="editor_replace_find_name" style="outline: none; border: 2px solid gray; width: 80px;">
+                <input type="text" onkeydown="editor_replace_find_replace()" placeholder="Replace with" id="editor_replace_find_name" style="/*outline: none; border: 2px solid gray; */width: 80px;">
                 <button onclick="editor_find2()">Find</button><button onclick="editor_replace1()">Replace</button><button onclick="editor_replace2()">Replace all</button><button onclick="editor_cancel_replace()">Cancel</button>
-                <input type="checkbox" id="editor_wrap_around1"><label for="editor_wrap_around1">Wrap Around</label>
+                <!-- <input type="checkbox" id="editor_wrap_around1"><label for="editor_wrap_around1">Wrap Around</label> -->
+                <label class="b-contain" style="margin-left: 5px">
+                    <span>Wrap Around</span>
+                    <input type="checkbox" id="editor_wrap_around1">
+                    <div class="b-input"></div>
+                </label>
             </div>
-            <div id="editor_gotoline" style="bottom: 0; right: 0; padding: 5px 5px; z-index: 3; display: none; position: absolute; width: 310px; height: 25px; color: white; border: 6px double white">
+            <div id="editor_gotoline" style="bottom: 0; right: 0; padding: 5px 5px; z-index: 3; display: none; position: absolute; width: 330px; height: 25px; color: white; border: 6px double white">
                 <label for="editor_goto_input" style="text-align: center">Line number:&nbsp;</label>
-                <input type="number" placeholder="Number" id="editor_goto_input" style="outline: none; border: 2px solid gray; width: 80px;">
+                <input type="number" placeholder="Number" id="editor_goto_input" style="/*outline: none; border: 2px solid gray; */width: 80px;">
                 <button onclick="editor_goto()">Go to</button><button onclick="editor_cancel_gotoline()">Cancel</button>
             </div>
         </div>
