New Auto-update and fix a bug

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <div id="menu-bar">
             <div class="left" role="menu">
                 <button class="menubar-btn" id="menu-btn" title="Menu"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M2 10V9h12v1H2zm0-4h12v1H2V6zm12-3v1H2V3h12zM2 12v1h12v-1H2z"/></svg></button>
-                <p style="color: white; margin-left: 20px;" id="title">edit - <span id="_file_name">Untitled</span><span id="current_state"></span></p>
             </div>
+            <p style="color: white; margin-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; direction: rtl;" id="title"><span id="_file_name">Untitled</span><span id="current_state"></span> - edit</p>
             <div class="right">
                 <button class="menubar-btn" id="minimize-btn" title="Minimize"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M14 8v1H3V8h11z"/></svg></button>
                 <button class="menubar-btn" id="max-unmax-btn" title="Maximize/Unmaximize"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M3 3v10h10V3H3zm9 9H4V4h8v8z"/></svg></button>
